--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.3.3
 requests==2.31.0
 python-binance==1.0.19
-numpy==1.24.3
+numpy==1.25.2
 flask-cors==4.0.0
 gunicorn==21.2.0
+setuptools==68.2.2
+wheel==0.41.2
