--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Flask==2.3.3
-requests==2.31.0
-python-binance==1.0.19
-numpy==1.25.2
-flask-cors==4.0.0
-gunicorn==21.2.0
-setuptools==68.2.2
-wheel==0.41.2
+Flask>=2.3.0,<3.0.0
+requests>=2.28.0,<3.0.0
+python-binance>=1.0.0,<2.0.0
+numpy>=1.21.0,<2.0.0
+flask-cors>=3.0.0,<4.0.0
+gunicorn>=20.0.0,<22.0.0
