--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask>=2.3.0,<3.0.0
-requests>=2.28.0,<3.0.0
-python-binance>=1.0.0,<2.0.0
-numpy>=1.21.0,<2.0.0
-flask-cors>=3.0.0,<4.0.0
-gunicorn>=20.0.0,<22.0.0
+numpy==1.24.3
+requests==2.31.0
+Flask==2.3.3
+Flask-CORS==4.0.0
+python-binance==1.0.19
+urllib3==1.26.18
