--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-numpy==1.26.3
-requests==2.31.0
-Flask==2.3.3
-Flask-CORS==4.0.0
+flask==2.3.3
+flask-cors==4.0.0
 python-binance==1.0.19
-urllib3==1.26.18
+requests==2.31.0
+gunicorn==21.2.0
